Fix environment variable

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,8 @@ jobs:
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker images
       run:
-        docker build . --file ./alpine/Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:alpine
-        docker build . --file ./slim-buster/Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:slim-buster
+        docker build . --file /alpine/Dockerfile --tag ${DOCKER_USER}/${IMAGE_NAME}:alpine
+        docker build . --file /slim-buster/Dockerfile --tag ${DOCKER_USER}/${IMAGE_NAME}:slim-buster
     - name: Push the Docker images
       run:
         docker push $DOCKER_USER/$IMAGE_NAME:alpine
