--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,17 +16,20 @@ jobs:
     - uses: actions/checkout@v2
     - name: Docker login
       env:
-        IMAGE_NAME: python-serverless-offline
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker images
+      env:
+        IMAGE_NAME: ${{secrets.IMAGE_NAME}}
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
       run: |
-        echo "${IMAGE_NAME}"
-        echo "${DOCKER_USER}"
-        docker build . --file /alpine/Dockerfile --tag ${DOCKER_USER}/python-serverless-offline:alpine
-        docker build . --file /slim-buster/Dockerfile --tag ${DOCKER_USER}/python-serverless-offline:slim-buster
+        docker build . --file /alpine/Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:alpine
+        docker build . --file /slim-buster/Dockerfile --tag $DOCKER_USER/$IMAGE_NAME:slim-buster
     - name: Push the Docker images
+      env:
+        IMAGE_NAME: ${{secrets.IMAGE_NAME}}
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
       run: |
-        docker push $DOCKER_USER/python-serverless-offline:alpine
-        docker push $DOCKER_USER/python-serverless-offline:slim-buster
+        docker push $DOCKER_USER/$IMAGE_NAME:alpine
+        docker push $DOCKER_USER/$IMAGE_NAME:slim-buster
