--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -8,9 +8,9 @@ RUN apk update && \
     apk add nodejs npm
 
 RUN pip install -U pip && \
-    npm install -g serverless serverless-offline
+    npm install -g --silent serverless serverless-offline
 
-COPY ./serverless.sh /serverless.sh
+COPY ./alpine/serverless.sh /serverless.sh
 RUN chmod +x /serverless.sh
 
 ENTRYPOINT ["/bin/sh", "/serverless.sh"]
