--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,11 @@ services:
     container_name: python_serverless
     image: lucasfrancaid/python-serverless-offline
     environment:
-      SERVERLESS_ACCESS_KEY: <SERVERLESS_ACCESS_KEY>  # Optional
-      AWS_ACCESS_KEY_ID: <AWS_ACCESS_KEY_ID>  # Required if you need use aws resources
-      AWS_SECRET_ACCESS_KEY: <AWS_SECRET_ACCESS_KEY>  # Required if you need use aws resources
+      HTTP_PORT: 3001
+      SERVERLESS_ACCESS_KEY: <SERVERLESS_ACCESS_KEY>
+      AWS_ACCESS_KEY_ID: <AWS_ACCESS_KEY_ID>
+      AWS_SECRET_ACCESS_KEY: <AWS_SECRET_ACCESS_KEY>
     ports:
-      - '3000:3000'
+      - '3001:3001'
     volumes:
       - .:/usr/app
